[package]
name = "storage"
version = "0.1.0"
authors = ["EgorRepnikov <egorepnikov@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.0.0"
actix-files = "0.2.1"
actix-service = "1.0.5"
dotenv = "0.15.0"
futures = "0.3.4"
serde = "1.0.105"
serde_derive = "1.0.105"
serde_json = "1.0.48"
envy = "0.4.1"
lazy_static = "1.4.0"
base64 = "0.12.0"
bytes = "0.5.4"
image = "0.23.2"
